update rcptt-plugin version to 2.2.0, delete deprecated (since Java 8) XXMaxPermsize