@@ -17,14 +17,13 @@
         <plugin>
             <groupId>org.eclipse.rcptt</groupId>
             <artifactId>rcptt-maven-plugin</artifactId>
-            <version>2.0.1</version>
+            <version>2.2.0</version>
             <extensions>true</extensions>
             <configuration> 
                 <runner>
                     <!-- Manage the memory used by Runner -->
                     <vmArgs>
                         <vmArg>-Xmx1024m</vmArg>
-                        <vmArg>-XX:MaxPermSize=256m</vmArg>
                     </vmArgs>
                 </runner>
                 <aut>
